# cpp-project-template

./: .gitignore  CMakeLists.txt  Makefile  README.md  README.org  conanfile.txt
src/: main.cpp
